@@ -4,89 +4,67 @@
 
 open Cfg_type
 
-let pf = Printf.fprintf
+module Node_id = 
+struct
+  type t = function_id_type
 
-let line oc line = 
-  output_string oc line;
-  output_string oc "\n"
+  let string_of_t id = String.concat "::" id.name
+end
 
 
-let assign_node_ids cfg nodes =
-  let counter = ref 0 in
-  let add fun_id =
-    if not (Hashtbl.mem nodes fun_id) 
-    then
-      begin
-	Hashtbl.add nodes fun_id !counter;
-	incr counter;
-      end
+module G = Dot_graph.Make(Node_id)
+
+let make_nodes cfg _id def =
+  let add id =
+    let loc_label =
+	(try
+	   match (Hashtbl.find cfg id).loc with
+	     | (file, line, _) ->
+		 [Printf.sprintf "file: %s" file;
+		  Printf.sprintf "line %d" line]
+	 with
+	   | Not_found -> []
+	)
+    in
+    let arg_count = ref 0 in
+    let args =
+      List.map 
+	(fun arg -> 
+	   incr arg_count;
+	   Printf.sprintf "Arg %d: %s" !arg_count arg)
+	id.param_types
+    in
+    let childs =
+      try
+	(Hashtbl.find cfg id).callees
+      with
+	| Not_found -> []
+    in
+      try
+	ignore(
+	  G.make_node_unlabelled id 
+	    ((String.concat "::" id.name) ::
+	       (args @ loc_label))
+	    []
+	    childs)
+      with
+	| G.Node_id_not_unique -> ()
   in
-    Hashtbl.iter
-      (fun _ fun_def ->
-	 if fun_def.callees <> [] 
-	 then
-	   begin
-	     add fun_def.fun_id;
-	     List.iter
-	       add
-	       fun_def.callees
-	   end
-      )
-      cfg
+  if def.callees <> [] 
+  then
+    begin
+      add def.fun_id;
+      List.iter
+	add
+	def.callees
+    end
 
 
-let output_node_id oc this_node fun_id =
-  pf oc "    \"%d\" [label=\"%s" 
-    this_node 
-    (String.concat "::" fun_id.name);
-  ignore(
-    List.fold_left
-      (fun count p -> 
-	 pf oc "\\nArg %d: %s" count p;
-	 count +1)
-      1
-      fun_id.param_types
-  )
-
-let node_id_end oc = 
-    line oc "\"]"
-
-	 
-let output_node oc cfg nodes fun_id this_node =
-  output_node_id oc this_node fun_id;
-  (try
-     match (Hashtbl.find cfg fun_id).loc with
-       | (file, line, _) ->
-	   pf oc "\\nfile: %s\\nline %d" file line
-   with
-     | Not_found -> ()
-  );
-  node_id_end oc;
-  (try
-     List.iter
-       (fun callee ->
-	  pf oc "    \"%d\" -> \"%d\";\n"
-	    this_node
-	    (Hashtbl.find nodes callee))
-     (Hashtbl.find cfg fun_id).callees
-   with
-     | Not_found -> ()
-  )
-  
-
+let cfg_commands =
+  ["node [ color = \"lightblue\", style = filled ]";
+   "edge [ arrowtail=odot ]"
+  ]
 
 let cfg_to_dot cfg outfile = 
-  let oc = 
-    match outfile with
-      | None -> stdout
-      | Some f -> open_out f
-  in
-  let nodes = Hashtbl.create (2 * Hashtbl.length cfg) 
-  in
-    assign_node_ids cfg nodes;
-    line oc "digraph \"CFG\" {";
-    line oc "  node [ color = \"lightblue\"; style = filled ];";
-    line oc "  edge [ arrowtail=odot ];";
-    Hashtbl.iter (output_node oc cfg nodes) nodes;
-    line oc "}"
-    
+  Hashtbl.iter (make_nodes cfg) cfg;
+  G.write_dot_file "CFG" cfg_commands outfile
