@@ -1,13 +1,13 @@
 digraph "CFG" {
-  node [ color = "lightblue"; style = filled ];
-  edge [ arrowtail=odot ];
-    "4" [label="f\nArg 1: A"]
-    "2" [label="A::constructor-special\nfile: test/t005.cc\nline 2"]
-    "0" [label="g\nfile: test/t005.cc\nline 6"]
+    node [ color = "lightblue", style = filled ];
+    edge [ arrowtail=odot ];
+    "1" [pos="91,-150", label="A::~A\nfile: test/t005.cc\nline 2"];
+    "2" [pos="291,-150", label="A::constructor-special\nfile: test/t005.cc\nline 2"];
+    "3" [pos="527,-150", label="A::constructor-special\nArg 1: reference(const(A))\nfile: test/t005.cc\nline 2"];
+    "4" [pos="700,-150", label="f\nArg 1: A"];
+    "0" [pos="373,0", label="g\nfile: test/t005.cc\nline 6"];
     "0" -> "1";
     "0" -> "2";
     "0" -> "3";
     "0" -> "4";
-    "3" [label="A::constructor-special\nArg 1: reference(const(A))\nfile: test/t005.cc\nline 2"]
-    "1" [label="A::~A\nfile: test/t005.cc\nline 2"]
 }
