@@ -1,13 +1,13 @@
 digraph "CFG" {
-  node [ color = "lightblue"; style = filled ];
-  edge [ arrowtail=odot ];
-    "2" [label="size"]
-    "4" [label="A::constructor-special\nArg 1: int\nfile: test/t006.cc\nline 4"]
-    "0" [label="g\nfile: test/t006.cc\nline 10"]
+    node [ color = "lightblue", style = filled ];
+    edge [ arrowtail=odot ];
+    "1" [pos="91,-150", label="A::~A\nfile: test/t006.cc\nline 2"];
+    "2" [pos="210,-150", label="size"];
+    "3" [pos="347,-150", label="A::constructor-special\nfile: test/t006.cc\nline 5"];
+    "4" [pos="565,-150", label="A::constructor-special\nArg 1: int\nfile: test/t006.cc\nline 4"];
+    "0" [pos="337,0", label="g\nfile: test/t006.cc\nline 10"];
     "0" -> "1";
     "0" -> "2";
     "0" -> "3";
     "0" -> "4";
-    "3" [label="A::constructor-special\nfile: test/t006.cc\nline 5"]
-    "1" [label="A::~A\nfile: test/t006.cc\nline 2"]
 }
